thomas portfolio update

--- a/0-Practice/Thomas/page.html
+++ b/0-Practice/Thomas/page.html
@@ -19,19 +19,34 @@
 
       <div id="me">
         <img id="thomas-photo" src="Resources/thomas.jpg" alt="nope" />
-        <div id="me-container">
-          <h1 id="me-text">Me</h1>
-          <p class="text-props"><span>My passion for art and design started at a young age which I got from drawing with my grandfather.</span></p>
-          <p class="text-props"><span>As soon as I was able, I went to a school where I could learn to become better at art and design.
-This school was SintLucas.</span></p>
-          <p class="text-props"><span>While studying I had to find an internship and wanted to challenge myself and at the same time gain more experience and see different cultures. Because of this I decided to go to Bangkok, Thailand for my internship, where I worked at a game company for 5 months.</span></p>
-        </div>
-
+          <h1 class="h1-props">Me</h1>
+          <p class="text-props"><span>My passion for art and design started at a young age which I got<br />from drawing with my grandfather.</span></p>
+          <p class="text-props"><span>As soon as I was able, I went to a school where I could learn to<br /> become better at art and design.
+<br />This school was SintLucas.</span></p>
+          <p class="text-props"><span>While studying I had to find an internship and wanted to challenge<br /> myself and at the same time gain more experience and see
+            different cultures. Because of this I decided to go to Bangkok, Thailand for my internship, where I worked at a game company for 5 months.</span></p>
       </div>
 
+      <div class="clear body-greyBar"></div>
+
+      <div id="ambition-project">
+
+          <h1 class="h1-props">Me</h1>
+          <p class="text-props"><span>My passion for art and design started at a young age which I got<br />from drawing with my grandfather.</span></p>
+          <p class="text-props"><span>As soon as I was able, I went to a school where I could learn to<br /> become better at art and design.
+<br />This school was SintLucas.</span></p>
+          <p class="text-props"><span>While studying I had to find an internship and wanted to challenge<br /> myself and at the same time gain more experience and see
+            different<br />Because of this I decided to go to Bangkok, Thailand for my internship, <br />where I worked at a game company for 5 months.</span></p>
+          <img class="tribe-photo clear" src="Resources/greentribe.webp" alt="nope" />
+          <img class="tribe-photo clear" src="Resources/blacktribe.webp" alt="nope" />
+      </div>
+
+      <div class="clear body-greyBar"></div>
+
+
+
+
+
     </div>
-
-
-
   </body>
 </html>
