--- a/0-Practice/Thomas/page.html
+++ b/0-Practice/Thomas/page.html
@@ -27,16 +27,15 @@
             different cultures. Because of this I decided to go to Bangkok, Thailand for my internship, where I worked at a game company for 5 months.</span></p>
       </div>
 
+
       <div class="clear body-greyBar"></div>
 
-      <div id="ambition-project">
 
-          <h1 class="h1-props">Me</h1>
-          <p class="text-props"><span>My passion for art and design started at a young age which I got<br />from drawing with my grandfather.</span></p>
-          <p class="text-props"><span>As soon as I was able, I went to a school where I could learn to<br /> become better at art and design.
-<br />This school was SintLucas.</span></p>
-          <p class="text-props"><span>While studying I had to find an internship and wanted to challenge<br /> myself and at the same time gain more experience and see
-            different<br />Because of this I decided to go to Bangkok, Thailand for my internship, <br />where I worked at a game company for 5 months.</span></p>
+      <div id="ambition-project">
+          <h1 class="h1-props">Ambition project</h1>
+          <p class="text-props"><span>The ambition project was the last school project we did.</span></p>
+          <p class="text-props"><span>the assignment was to think of something that you love which for me was strategy games.</span></p>
+          <p class="text-props"><span>So I decided to make concept art for 2 factions with both a starting base, a watch tower and basic housing.</span></p>
           <img class="tribe-photo clear" src="Resources/greentribe.webp" alt="nope" />
           <img class="tribe-photo clear" src="Resources/blacktribe.webp" alt="nope" />
       </div>
