--- a/0-Practice/Thomas/page.html
+++ b/0-Practice/Thomas/page.html
@@ -5,6 +5,7 @@
 
   <head>
     <title>portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css.css">
   </head>
   <body>
