L155 intro to boostrap grid system

--- a/5-Bootstrap/bootstrap.html
+++ b/5-Bootstrap/bootstrap.html
@@ -9,9 +9,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
 
+    <div class="container">
+      <h1>Hello, World!</h1>
 
+      <div class="row">
+        <div class="col-md-6">
+          One of 2 collumns
+        </div>
+        <div class="col-md-6">
+          One of 2 collumns
+        </div>
+      </div>
+    </div>
 
 
 
