--- a/0-Practice/Thomas/BSpage.html
+++ b/0-Practice/Thomas/BSpage.html
@@ -62,12 +62,17 @@
             <img id="thomas-photo" src="Resources/thomas.jpg" alt="nope"/>
           </div>
           <div class="col-sm-7">
-            <h1 class="h1-props">Me</h1>
-            <p class="text-props"><span>My passion for art and design started at a young age which I got<br />from drawing with my grandfather.</span></p>
-            <p class="text-props"><span>As soon as I was able, I went to a school where I could learn to<br /> become better at art and design.
-              <br />This school was SintLucas.</span></p>
-            <p class="text-props"><span>While studying I had to find an internship and wanted to challenge<br /> myself and at the same time gain more experience and see
-              <br />different cultures. Because of this I decided to go to Bangkok,<br /> Thailand for my internship, where I worked at a game company<br /> for 5 months.</span></p>
+            <div id="me-text">
+              <h1>Me</h1>
+              <br />
+              <br />
+              <br />
+              <p class="text-props"><span>My passion for art and design started at a young age which I got<br />from drawing with my grandfather.</span></p>
+              <p class="text-props"><span>As soon as I was able, I went to a school where I could learn to<br /> become better at art and design.
+                <br />This school was SintLucas.</span></p>
+              <p class="text-props"><span>While studying I had to find an internship and wanted to challenge<br /> myself and at the same time gain more experience and see
+                <br />different cultures. Because of this I decided to go to Bangkok,<br /> Thailand for my internship, where I worked at a game company<br /> for 5 months.</span></p>
+            </div>
           </div>
 
         </div>
@@ -78,7 +83,7 @@
 
         <div class="row">
           <div class="col-sm-8">
-            <h1 class="h1-props">Ambition project</h1>
+            <h1>Ambition project</h1>
             <p class="text-props"><span>The ambition project was the last school project we did.</span></p>
             <p class="text-props"><span>the assignment was to think of something that you love which for me was strategy games.</span></p>
             <p class="text-props"><span>So I decided to make concept art for 2 factions with both a starting base, a watch tower and basic housing.</span></p>
