--- a/FreeCodeCamp/Dylano/index.html
+++ b/FreeCodeCamp/Dylano/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 
 <html>
   <head>
@@ -8,66 +9,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- imports -->
+    <script src="https://use.fontawesome.com/d91196c311.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script type="text/javascript" src="jquery.min.js"></script>
 
     <!-- files -->
     <link rel="stylesheet" type="text/css" href="mainCSS.css">
-    <script type="text/javascript" src="mainJS.js"></script>
-  </head>
 
+  </head>
   <body>
 
 
-    <header>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h1>Dylano Hartman</h1>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <div class="container">
+    <nav>
       <div id="nav-container">
-        <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <nav class="navbar fixed-top navbar-toggleable-md navbar-light bg-faded">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Fun Stuff<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#Home">Home<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Resume</a>
+                <a class="nav-link" href="#Projects">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#About">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#Contact">Contact</a>
               </li>
             </ul>
           </div>
         </nav>
       </div>
+    </nav>
+
+
+
+
+    <div id="home" >
+      <div class="container-fluid">
+          <div class="row ">
+            <div class="fadeIn col-sm-12">
+              <h1 class="header-text">Dylano Hartman</h1>
+              <h3 class="header-text ">Game Developer getting into Web Development</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <div class="container-fluid">
+
+
+      <div id="projects">
+        <div class="row ">
+          <div class="col-sm-6">
+            <h2>Web Dev</h2>
+          </div>
+          <div class="col-sm-6">
+            <h2>Game Dev</h2>
+          </div>
+        </div>
+      </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="mainJS.js"></script>
   </body>
 </html>
