--- a/FreeCodeCamp/Dylano/index.html
+++ b/FreeCodeCamp/Dylano/index.html
@@ -68,9 +68,14 @@
         <div class="row ">
           <div class="col-sm-6">
             <h2>Web Dev</h2>
+            <img src="https://unsplash.it/320/300 " class="project-image"/>
+            <img src="https://unsplash.it/320/300"class="project-image" />
+
           </div>
           <div class="col-sm-6">
             <h2>Game Dev</h2>
+            <img src="https://unsplash.it/320/300 "  class="project-image"/>
+            <img src="https://unsplash.it/320/300" class="project-image" />
           </div>
         </div>
       </div>
