--- a/FreeCodeCamp/Dylano/index.html
+++ b/FreeCodeCamp/Dylano/index.html
@@ -23,7 +23,7 @@
 
     <nav>
       <div id="nav-container">
-        <nav class="navbar fixed-top navbar-toggleable-md navbar-light bg-faded">
+        <nav class="navbar fixed-top navbar-toggleable-md navbar-light bg-inverse">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -68,14 +68,18 @@
         <div class="row ">
           <div class="col-sm-6">
             <h2>Web Dev</h2>
-            <img src="https://unsplash.it/320/300 " class="project-image"/>
-            <img src="https://unsplash.it/320/300"class="project-image" />
-
+            <div class="center">
+              <img src="https://unsplash.it/320/300 "  class="project-image"/>
+              <img src="https://unsplash.it/320/300" class="project-image" />
+            </div>
           </div>
           <div class="col-sm-6">
             <h2>Game Dev</h2>
-            <img src="https://unsplash.it/320/300 "  class="project-image"/>
-            <img src="https://unsplash.it/320/300" class="project-image" />
+            <div class="center">
+              <img src="https://unsplash.it/320/300 "  class="project-image"/>
+              <img src="https://unsplash.it/320/300" class="project-image" />
+            </div>
+
           </div>
         </div>
       </div>
