--- a/FreeCodeCamp/Dylano/index.html
+++ b/FreeCodeCamp/Dylano/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- imports -->
-    <script src="https://use.fontawesome.com/d91196c311.js"></script>
+   	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <script type="text/javascript" src="jquery.min.js"></script>
@@ -40,6 +40,9 @@
                 <a class="nav-link page-scroll" href="#About">About Me</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link page-scroll" href="#Skills">Skills</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link page-scroll" href="#Contact">Contact</a>
               </li>
             </ul>
@@ -53,42 +56,198 @@
       <div class="container-fluid">
           <div class="row ">
             <div class="fadeIn col-sm-12">
-              <h1 class="header-text">Dylano Hartman</h1>
-              <h3 class="header-text ">Game Developer getting into Web Development</h3>
+              <h1 class="header-text displayNone fadeIn">Dylano Hartman</h1>
+              <h3 class="header-text displayNone fadeIn">Game Developer getting into Web Development</h3>
             </div>
           </div>
         </div>
       </div>
 
     <br />
-    <div class="container-fluid">
+    <div id="Projects" class="container-fluid">
+      <br />
+      <h2 class="section-header">My projects</h2>
+      <br />
+      <div class="row ">
+        <div class="col-sm-6">
+          <h2 fadeIn>Game Dev</h2>
+          <br />
+          <div class="center">
+              <div class="project-box">
+                <img src="Resources/urbanroad.png"  class="img-size"/>
+                <h3>Urban Road</h3>
+                <span class="caption">
+                  Urban Road is a school project which is developed in C#, using the Unity Engine. I made the Menu, Audio and most of the levels.
+                </span>
+              </div>
+              <div class="project-box">
+                <img src="Resources/ctouch.jpg"  class="img-size"/>
+                <h3>CTOUCH</h3>
+                <span class="caption">
+                  During my internship I worked on a project for CTOUCH. I used the Blueprints of the Unreal Engine to do this.
+                </span>
+              </div>
+              <div class="project-box">
+                <img src="Resources/sintlucasopenday.png"  class="img-size"/>
+                <h3>SintLucas Open Day</h3>
+                <span class="caption">
+                  During my internship I made a game for the open day of Sint Lucas. I used the Blueprints of the Unreal Engine to do this.
+                </span>
+              </div>
+              <div class="project-box">
+                <img src="Resources/terraingen.png"  class="img-size"/>
+                <h3>Terrain Generator</h3>
+                <span class="caption">
+                  I made a procedural random terrain generator in C#, using the Unity Engine.
+                </span>
+              </div>
+          </div>
+        </div>
 
 
-      <div id="Projects">
-        <div class="row ">
-          <div class="col-sm-6">
-            <h2>Game Dev</h2>
-            <div class="center">
-              <img src="Resources/urbanroad.png"  class="project-image img-size"/>
-              <img src="https://static.wixstatic.com/media/a96fca_a2a122b00d194c538845ca822a81fa25~mv2.jpg/v1/fill/w_250,h_168,al_c,q_80,usm_0.66_1.00_0.01/a96fca_a2a122b00d194c538845ca822a81fa25~mv2.webp" class="project-image img-size" />
-              <img src="Resources/terraingen.png"  class="project-image img-size"/>
-
-
+        <div class="col-sm-6">
+          <h2 fadeIn>Web Dev</h2>
+          <br />
+          <div class="center">
+              <div class="project-box">
+                <img src="Resources/responsive.png"  class="img-size"/>
+                <h3>My Portfolio</h3>
+                <span class="caption">
+                  This is my first "real" web development project. I made this site completely from scratch using HTML, CSS, jQuery and Bootrap.
+                </span>
+              </div>
+              <div class="project-box">
+                <img src="Resources/codeplayer.png"  class="img-size"/>
+                <h3>CodePlayer</h3>
+                <span class="caption">
+                  One of the projects I made while following a course at Udemy.
+                </span>
+              </div>
             </div>
           </div>
-          <div class="col-sm-6">
-            <h2>Web Dev</h2>
-            <div class="center">
-              <img src="Resources/responsive.png "  class="project-image img-size"/>
-              <img src="Resources/codeplayer.png "  class="project-image img-size"/>
-              <img src="Resources/comingsoon.jpg" class="project-image img-size" />
 
-            </div>
+        </div>
+      </div>
 
+
+    <br />
+    <div id="About" class="container-fluid">
+      <br /><br />
+      <h2 class="section-header">Who am I?</h2>
+      <br /><br />
+
+      <div class="row">
+        <div class="col-sm-6">
+          <p >
+            Hello! My name is Dylano Hartman and I'm from the Netherlands. I'm a Game Developer who decided to learn Web Development. I'm about to graduate from a 4 years Game Development course at SintLucas in Eindhoven. I am learning Web Development with Udemy, FreeCodeCamp and a bunch of other online resources.
+          </p>
+          <p>
+            Learning is my passion and will never stop doing so. I love to code, wether it's games or web sites / applications, So I decided to learn web development as I see a better future in Web than in Games.
+          </p>
+          <p>
+            I also love to play games, watch anime and traveling!
+          </p>
+
+        </div>
+        <div class="col-sm-6">
+          <div class="center">
+            <img src="Resources/me.jpg" class="img-circle img-responsive me-image" width="300px" height="300px"/>
           </div>
         </div>
       </div>
+      <br />
     </div>
+
+
+    <br />
+    <br />
+
+
+    <div id="Skills" class="container-fluid">
+      <h2 class="section-header">What can I do?</h2>
+      <br />
+      <div class="row ">
+        <div class="col-sm-6">
+          <h2 fadeIn>Game Dev</h2>
+          <br />
+          <div class="center">
+
+            <img src="Resources/Logos/gd/unity.png"  id="unity"/>
+            <img src="Resources/Logos/gd/ue4.png"  class="logo-size"/>
+            <img src="Resources/Logos/gd/cpp.png"  class="logo-size"/>
+            <img src="Resources/Logos/gd/csharp.png"  class="logo-size"/>
+            <img src="Resources/Logos/gd/sfml.png"  class="logo-size"/>
+          </div>
+        </div>
+
+        <div class="col-sm-6">
+          <h2 fadeIn>Web Dev</h2>
+          <br />
+          <div class="center">
+              <img src="Resources/Logos/md/html.png"  id="unity"/>
+              <img src="Resources/Logos/md/css.png"  class="logo-size"/>
+              <img src="Resources/Logos/md/javascript.png"  class="logo-size"/>
+              <img src="Resources/Logos/md/jquery.png"  class="logo-size"/>
+              <img src="Resources/Logos/md/bootstrap.png"  class="logo-size"/>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <br />
+    <br />
+
+
+      <div id="Contact" class="text-center">
+
+              <div class="container">
+                <br />
+                <br />
+                <h2 class="section-header">Contact Us</h2>
+                <p>Feel free to contact me by filling in the contact form or visit one of my social network sites</p>
+                <div class="row">
+                  <div class="col-md-12">
+                    <form class="form-horizontal">
+                      <div class="form-group">
+                        <label for="exampleInputName2">Name</label>
+                        <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputEmail2">Email</label>
+                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+                      </div>
+                      <div class="form-group ">
+                        <label for="exampleInputText">Your Message</label>
+                       <textarea  class="form-control" placeholder="Hey there!"></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-default">Send Message</button>
+                    </form>
+                  </div>
+                </div>
+
+                    <br />
+                    <hr color="white">
+                    <br />
+                      <h4>My social network sites</h4>
+                    <ul class="list-inline banner-social-buttons">
+                      <div class="row">
+                        <div class="col-md-12">
+                          <div id="social-buttons"class="center">
+                            <li><a href="https://www.linkedin.com/in/dylano-hartman-ab4607bb/" class="btn btn-default btn-lg btn-secondary"><i class="fa fa-linkedin"> <span class="network-name">LinkedIn</span></i></a></li>
+                            <li><a href="https://twitter.com/DylanoHartmn" class="btn btn-default btn-lg btn-secondary"><i class="fa fa-twitter"> <span class="network-name">Twitter</span></i></a></li>
+                            <li><a href="https://www.facebook.com/dylano.hartman" class="btn btn-default btn-lg btn-secondary"><i class="fa fa-facebook"> <span class="network-name">Facebook</span></i></a></li>
+                          </div>
+                        </div>
+                      </div>
+                    </ul>
+
+              </div>
+          </div>
+
+
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="jquery.easing.min.js"></script>
