--- a/FreeCodeCamp/Dylano/index.html
+++ b/FreeCodeCamp/Dylano/index.html
@@ -19,7 +19,7 @@
     <link href="scrolling-nav.css" rel="stylesheet">
 
   </head>
-  <body>
+  <body data-spy="scroll" data-target="#nav-container">
 
 
     <nav>
