Weather app working json call

--- a/FreeCodeCamp/Weather App/index.html
+++ b/FreeCodeCamp/Weather App/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- imports -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <script type="text/javascript" src="jquery/jquery.min.js"></script>
 
@@ -25,9 +25,16 @@
           <div class="greyTest">
             <span class="titleText">Enter the city you want to know the weather off.</span>
           </div>
+          <br />
+          <div  class="greyTest">
+            <span id="showWeather" class="titleText">weather</span>
+          </div>
+
         </div>
       </div>
     </div>
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
