Weather App update

--- a/FreeCodeCamp/Weather App/index.html
+++ b/FreeCodeCamp/Weather App/index.html
@@ -22,15 +22,31 @@
     <div class="container-fluid">
       <div class="row">
         <div class="text-center col-md-12">
-          <div class="greyTest">
-            <span class="titleText">Enter the city you want to know the weather off.</span>
+
+          <div  class="greyTest">
+            <span class="titleText">What's the weather?</span>
           </div>
           <br />
-          <div  class="greyTest">
-            <span id="showWeather" class="titleText">weather</span>
+        </div>
+      </div>
+
+      <div class="text-center greyTest">
+
+        <p id="showDegrees" class="titleText"></p>
+        <span id="showLocation" class="titleText"></span>
+
+          <div class="row">
+
+            <div class="col-sm-6">
+              <p class="titleText">Humidty: </p>
+              <p class="titleText"></p>
+            </div>
+
+            <div class="col-sm-6">
+              <p id="showHumidty" class="titleText"></p>
+            </div>
           </div>
 
-        </div>
       </div>
     </div>
 
