Weather app added background changes depending on the weather type

--- a/FreeCodeCamp/Weather App/index.html
+++ b/FreeCodeCamp/Weather App/index.html
@@ -47,8 +47,20 @@
             </div>
           </div>
 
+        <div class="row">
+          <div class="col-sm-6">
+            <p class="titleText">Weather Type:</p>
+          </div>
+
+          <div class="col-sm-6">
+            <div class="weatherType titleText"></div>
+          </div>
+
+        </div>
+
       </div>
     </div>
+
 
 
 
