--- a/FreeCodeCamp/Dylano/index.html
+++ b/FreeCodeCamp/Dylano/index.html
@@ -73,6 +73,13 @@
           <h2 fadeIn>Game Dev</h2>
           <br />
           <div class="center">
+            <div class="project-box">
+              <img src="Resources/gaster.png"  class="img-size"/>
+              <h3>Gaster</h3>
+              <span class="caption">
+                Gaster is a mobile game project for a company called 'Rebel in the House'. I was the sole programmer of the team. It's made in the Unreal Engine using Blueprint.
+              </span>
+            </div>
               <div class="project-box">
                 <img src="Resources/urbanroad.png"  class="img-size"/>
                 <h3>Urban Road</h3>
@@ -84,7 +91,7 @@
                 <img src="Resources/ctouch.jpg"  class="img-size"/>
                 <h3>CTOUCH</h3>
                 <span class="caption">
-                  During my internship I worked on a project for CTOUCH. I used the Blueprints of the Unreal Engine to do this.
+                  During my internship I worked on a project for CTOUCH. It's made in the Unreal Engine using Blueprint.
                 </span>
               </div>
               <div class="project-box">
@@ -113,7 +120,8 @@
                 <img src="Resources/responsive.png"  class="img-size"/>
                 <h3>My Portfolio</h3>
                 <span class="caption">
-                  This is my first "real" web development project. I made this site completely from scratch using HTML, CSS, jQuery and Bootrap.
+                  This is my first "real" web development project. I made this site completely
+                  from scratch using HTML, CSS, jQuery and Bootrap.
                 </span>
               </div>
               <div class="project-box">
@@ -123,9 +131,15 @@
                   One of the projects I made while following a course at Udemy.
                 </span>
               </div>
+              <div class="project-box rqm">
+                <img src="Resources/rqm.png"  class="img-size"/>
+                <h3>Random Quote Machine</h3>
+                <span class="caption">
+                  This is a project I made to introduce myself to javascript APIs.
+                </span>
+              </div>
             </div>
           </div>
-
         </div>
       </div>
 
@@ -139,10 +153,15 @@
       <div class="row">
         <div class="col-sm-6">
           <p >
-            Hello! My name is Dylano Hartman and I'm from the Netherlands. I'm a Game Developer who decided to learn Web Development. I'm about to graduate from a 4 years Game Development course at SintLucas in Eindhoven. I am learning Web Development with Udemy, FreeCodeCamp and a bunch of other online resources.
+            Hello! My name is Dylano Hartman and I'm from the Netherlands. I'm a Game Developer
+            who decided to learn Web Development. I graduated from a 4 years Game Development
+            course at SintLucas in Eindhoven. I'm now doing a Computer Science Bachelor Course at Fontys in Eindhoven.
+            I am learning Web Development with Udemy, FreeCodeCamp and a bunch of other online resources.
           </p>
           <p>
-            Learning is my passion and will never stop doing so. I love to code, wether it's games or web sites / applications, So I decided to learn web development as I see a better future in Web than in Games.
+            Learning is my passion and will never stop doing so. I love to code, wether it's games
+            or web sites / applications, So I decided to learn web development as I see a better
+            future in Web than in Games.
           </p>
           <p>
             I also love to play games, watch anime and traveling!
@@ -184,19 +203,18 @@
           <h2 fadeIn>Web Dev</h2>
           <br />
           <div class="center">
-              <img src="Resources/Logos/md/html.png"  id="unity"/>
-              <img src="Resources/Logos/md/css.png"  class="logo-size"/>
-              <img src="Resources/Logos/md/javascript.png"  class="logo-size"/>
-              <img src="Resources/Logos/md/jquery.png"  class="logo-size"/>
-              <img src="Resources/Logos/md/bootstrap.png"  class="logo-size"/>
+            <img src="Resources/Logos/md/html.png"  id="unity"/>
+            <img src="Resources/Logos/md/css.png"  class="logo-size"/>
+            <img src="Resources/Logos/md/javascript.png"  class="logo-size"/>
+            <img src="Resources/Logos/md/jquery.png"  class="logo-size"/>
+            <img src="Resources/Logos/md/bootstrap.png"  class="logo-size"/>
           </div>
         </div>
 
       </div>
     </div>
 
-    <br />
-    <br />
+    <br /><br />
 
 
       <div id="Contact" class="text-center">
