--- a/FreeCodeCamp/Weather App/index.html
+++ b/FreeCodeCamp/Weather App/index.html
@@ -55,6 +55,14 @@
           <div class="col-sm-6">
             <div class="weatherType titleText"></div>
           </div>
+        </div>
+
+        <br>
+
+        <div class="row">
+          <div class="col-sm-12">
+            <button class="degreeButton">&deg;C / &deg;F</button>
+          </div>
 
         </div>
 
