--- a/FreeCodeCamp/Wiki Searcher/index.html
+++ b/FreeCodeCamp/Wiki Searcher/index.html
@@ -32,8 +32,8 @@
     <div class="row">
       <div class="col-sm-12">
         <div id="searchArea">
-          <input type="text" name="searchBar" value="">
-          <button type="button" name="searchButton">Search</button>
+          <input type="text" name="searchBar" value="" class="searchBar">
+          <button type="button" name="searchButton" class="searchButton">Search</button>
         </div>
       </div>
     </div>
