Added wiki searcher project to portfolio

--- a/FreeCodeCamp/Dylano/index.html
+++ b/FreeCodeCamp/Dylano/index.html
@@ -138,6 +138,13 @@
                   This is a project I made to introduce myself to javascript APIs.
                 </span>
               </div>
+              <div class="project-box">
+                <img src="Resources/wiki.png"  class="img-size"/>
+                <h3>Wiki Searcher</h3>
+                <span class="caption">
+                  Dit is een project om javascript API's te oefenen. Hier kan je een zoekterm invoeren en hier krijg je wikipedia pagina's van te zien.
+                </span>
+              </div>
             </div>
           </div>
         </div>
